snapshots/syntax/library/functions/string/strreverse/strreverse_while_wend.snap
---
source: src/syntax/library/functions/string/strreverse.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: LenKeyword
                          text: Len
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: StrReverse
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: str
                                    - kind: RightParenthesis
                                      text: )
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: GreaterThanOperator
                      text: ">"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "10"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: str
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Trim$
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: str
                            - kind: RightParenthesis
                              text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
